--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,170 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.center{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.card{
+  width:14rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 1rem;
+  padding:1rem;
+  background:#fff;
+  border: #fff 1px solid;
+  border-radius: 1rem;
+  box-shadow: 0 0 1rem rgba(174, 165, 165, 0.7);
+  height:auto
+}
+
+.title{
+  color:#22223b;
+}
+
+.header{
+  display: flex;
+  justify-content: space-around;
+  text-align:center;
+  color:#fff;
+  font-size:1.5em;
+  line-height:1.2;
+  font-weight:bold;
+  padding: 1rem;
+  background:#000;
+  box-shadow:0px 3px 6px rgba(0,0,0,.3);
+  border-radius:8px;
+}
+
+ul{
+  list-style: none;
+  padding: 1rem;
+  margin: 1rem;
+}
+a{
+  color: #fff;
+  text-decoration:none;
+}
+
+.form{
+  display:flex;
+  flex-direction:column;
+  justify-content:space-around;
+  padding: 2rem;
+  margin: 2rem 15rem;
+}
+input{
+  padding: .75rem;
+  margin: .5rem;
+  border-radius: 5px;
+  outline: none;
+  border: solid thin #ccc;
+}
+
+.form button{
+  width: 100%;
+  padding: 1rem;
+  margin: 1rem auto;
+  border: none;
+  border-radius: 5px;
+  background: #000;
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #fff;
+  cursor: pointer;
+}
+
+img{
+  max-width: 100%;
+  height:auto;
+  border-radius: 1rem;
+}
+
+.card button{
+  padding: 1rem;
+  border:  1px solid;
+  border-radius:1rem;
+  font-size: 1.2em;
+  font-weight: bold;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.icon{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.delicon{
+ width: 1.4rem;
+ color: red;
+}
+.editicon{
+ width: 1.4rem;
+ color: green;
+}
+.eyeicon{
+  width: 1.4rem;
+  color: #0096c7;
+ }
+ 
+.bookcard{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  width: 90%;
+  border-radius: 5px;
+  margin: 1rem;
+  text-align: center; 
+}
+
+.book-details-container {
+  display: flex;
+  justify-content: space-around;
+  justify-self: center;
+  width: 800px;
+  margin: 20px auto;
+  background-color: #fff;
+  /* padding: 20px; */
+  box-shadow: 0 0 3rem rgba(174, 165, 165, 0.5);
+  border-radius: 1rem;
+}
+
+.book-info {
+  text-align: justify;
+  width: 50%;
+  padding: 1rem ;
+  color: #333;
+  margin: 1rem;
+}
+
+.imgbook{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 1rem;
+}
+
+.book-info-div{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+    
+}
+
+.book-info-cards{
+  width: 30%;
+  padding: 5px 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  border: #fff 1px solid;
+  border-radius: 1rem;
+  box-shadow: 0 0 1rem rgba(174, 165, 165, 0.7);
+
+}
